// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MemberBanner matches the last snapshot 1`] = `
<View>
  <Connect(ImagePicker)
    disabled={true}
    id={undefined}
    onChoice={[Function]}
    onPendingChange={[Function]}
    title="Change Banner"
    type="userBanner"
  >
    <Image
      source={
        Object {
          "uri": "yay.png",
        }
      }
    />
  </Connect(ImagePicker)>
  <Connect(ImagePicker)
    disabled={true}
    id={undefined}
    onChoice={[Function]}
    onPendingChange={[Function]}
    title="Change Avatar"
    type="userAvatar"
  >
    <View>
      <Image
        source={
          Object {
            "uri": "pong.png",
          }
        }
      />
    </View>
  </Connect(ImagePicker)>
</View>
`;

exports[`MemberHeader matches the last snapshot 1`] = `
<View>
  <View>
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
    >
      Jonas
    </Text>
    <View>
      <TouchableOpacity
        activeOpacity={0.2}
        focusedOpacity={0.7}
        onPress={undefined}
      >
        <Icon
          name="Messages"
        />
      </TouchableOpacity>
      <MemberMenu
        flagMember={[Function]}
        goToEdit={undefined}
        isMe={undefined}
      />
    </View>
  </View>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
  >
    whale
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
  >
    fingers crossed
  </Text>
</View>
`;

exports[`MemberMenu returns a popupmenu when flagging allowed 1`] = `
<PopupMenuButton
  actions={
    Array [
      "Flag This Member",
    ]
  }
  destructiveButtonIndex={0}
  onSelect={[Function]}
>
  <Icon
    name="More"
  />
</PopupMenuButton>
`;

exports[`MemberMenu returns null when flagging not allowed 1`] = `null`;

exports[`MemberProfile doesnt have the flag content option 1`] = `
<Connect(MemberFeed)
  header={
    <View>
      <MemberBanner
        isMe={undefined}
        person={
          Object {
            "id": 1,
          }
        }
        updateUserSettings={undefined}
      />
      <View>
        <MemberHeader
          flagMember={undefined}
          goToEdit={undefined}
          isMe={undefined}
          onPressMessages={undefined}
          person={
            Object {
              "id": 1,
            }
          }
        />
        <ReadMoreButton
          goToDetails={undefined}
        />
      </View>
    </View>
  }
  id={1}
/>
`;

exports[`MemberProfile matches the last snapshot 1`] = `
<Connect(MemberFeed)
  header={
    <View>
      <MemberBanner
        isMe={undefined}
        person={
          Object {
            "id": 1,
          }
        }
        updateUserSettings={undefined}
      />
      <View>
        <MemberHeader
          flagMember={[Function]}
          goToEdit={undefined}
          isMe={undefined}
          onPressMessages={undefined}
          person={
            Object {
              "id": 1,
            }
          }
        />
        <ReadMoreButton
          goToDetails={undefined}
        />
      </View>
    </View>
  }
  id={1}
/>
`;

exports[`ReadMoreButton matches the last snapshot 1`] = `
<View>
  <TouchableOpacity
    activeOpacity={0.2}
    focusedOpacity={0.7}
    onPress={[Function]}
  >
    <View>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
      >
        Read More
      </Text>
    </View>
  </TouchableOpacity>
</View>
`;
